--- a/index.html
+++ b/index.html
@@ -28,38 +28,102 @@
       </ul>
     </nav>
     <section></section>
-
     <!--Aqui comienza la siguiente sección de tarjetas-->
     <div class="card-list">
-
       <a href="#" class="card-item">
-          <img src="https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-          <span class="developer">developer</span>
-          <h3>Apuntando a lo alto</h3>
-          <div class="arrow">
-              <i class="fa-solid fa-arrow-right"></i>
-          </div>
+        <img
+          src="https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <span class="developer">developer</span>
+        <h3>Apuntando a lo alto</h3>
+        <div class="arrow">
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
       </a>
 
       <a href="#" class="card-item">
-          <img src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?q=80&w=1441&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-          <span class="designer">designer</span>
-          <h3>Eternamente siempre</h3>
-          <div class="arrow">
-              <i class="fa-solid fa-arrow-right"></i>
-          </div>
+        <img
+          src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?q=80&w=1441&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <span class="designer">designer</span>
+        <h3>Eternamente siempre</h3>
+        <div class="arrow">
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
       </a>
 
       <a href="#" class="card-item">
-          <img src="https://plus.unsplash.com/premium_photo-1669562729042-b0a3d23afcf1?q=80&w=1253&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-          <span class="editor">editorr</span>
-          <h3>Me gusta la pizza</h3>
-          <div class="arrow">
-              <i class="fa-solid fa-arrow-right"></i>
-          </div>
+        <img
+          src="https://plus.unsplash.com/premium_photo-1669562729042-b0a3d23afcf1?q=80&w=1253&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        />
+        <span class="editor">editorr</span>
+        <h3>Me gusta la pizza</h3>
+        <div class="arrow">
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
       </a>
+    </div>
 
-  </div>
+    <!--Aqui comienza el footer-->
+    <footer>
+      <div class="content">
+        <div class="top">
+          <div class="logo_details">
+            <span class="logo">Bedu</span>
+          </div>
+          <!-- Iconos de redes sociales -->
+          <div class="media-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+          </div>
+          <!-- Enlaces de nuestra página -->
+          <div class="link-boxes">
+            <ul class="box">
+              <li class="link-name">Compañia</li>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Contacto</a></li>
+              <li><a href="#">Acerca de </a></li>
+              <li><a href="#">Promociones</a></li>
+            </ul>
 
-</body>
+            <ul class="box">
+              <li class="link-name">Servicios</li>
+              <li><a href="#">Diseño de apps</a></li>
+              <li><a href="#">Diseño WEB</a></li>
+              <li><a href="#">Diseño de logos</a></li>
+              <li><a href="#">Diseño de fuentes</a></li>
+            </ul>
+
+            <ul class="box">
+              <li class="link-name">Cuenta</li>
+              <li><a href="#">Perfil</a></li>
+              <li><a href="#">Facturacion</a></li>
+              <li><a href="#">RFC</a></li>
+              <li><a href="#">EJM</a></li>
+            </ul>
+
+            <ul class="box">
+              <li class="link-name">Cursos</li>
+              <li><a href="#">html</a></li>
+              <li><a href="#">CSS</a></li>
+              <li><a href="#">Javascript</a></li>
+              <li><a href="#">C++</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="bottom-details">
+        <div class="bottom_text">
+          <span class="copyright_text">Copyright © 2024 <a href="#">Bedu.</a></span>
+          <span class="policy_terms">
+            <a href="#">Politica de privacidad</a>
+            <a href="#">Terminos y condiciones</a>
+          </span>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
