--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@
     <footer>
       <div class="content">
         <div class="top">
-          <div class="logo_details">
-            <span class="logo">Bedu</span>
+          <div class="logo-details">
+            <span class="logo-name">Bedu</span>
           </div>
-          <!-- Iconos de redes sociales -->
+          <!--Iconos de redes sociales-->
           <div class="media-icons">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
           </div>
-          <!-- Enlaces de nuestra página -->
+          <!--Enlaces de nuestra pagina-->
           <div class="link-boxes">
             <ul class="box">
               <li class="link-name">Compañia</li>
               <li><a href="#">Inicio</a></li>
               <li><a href="#">Contacto</a></li>
-              <li><a href="#">Acerca de </a></li>
+              <li><a href="#">Acerca de</a></li>
               <li><a href="#">Promociones</a></li>
             </ul>
 
@@ -93,22 +93,22 @@
               <li><a href="#">Diseño de apps</a></li>
               <li><a href="#">Diseño WEB</a></li>
               <li><a href="#">Diseño de logos</a></li>
-              <li><a href="#">Diseño de fuentes</a></li>
+              <li><a href="#">Diseño de baners</a></li>
             </ul>
 
             <ul class="box">
               <li class="link-name">Cuenta</li>
               <li><a href="#">Perfil</a></li>
-              <li><a href="#">Facturacion</a></li>
-              <li><a href="#">RFC</a></li>
-              <li><a href="#">EJM</a></li>
+              <li><a href="#">Facturación</a></li>
+              <li><a href="#">Diseño de logos</a></li>
+              <li><a href="#">Diseño de baners</a></li>
             </ul>
 
             <ul class="box">
               <li class="link-name">Cursos</li>
-              <li><a href="#">html</a></li>
+              <li><a href="#">Html</a></li>
               <li><a href="#">CSS</a></li>
-              <li><a href="#">Javascript</a></li>
+              <li><a href="#">JavaScript</a></li>
               <li><a href="#">C++</a></li>
             </ul>
           </div>
@@ -117,7 +117,9 @@
 
       <div class="bottom-details">
         <div class="bottom_text">
-          <span class="copyright_text">Copyright © 2024 <a href="#">Bedu.</a></span>
+          <span class="copyright_text"
+            >Copyright © 2024 <a href="#">Bedu.</a></span
+          >
           <span class="policy_terms">
             <a href="#">Politica de privacidad</a>
             <a href="#">Terminos y condiciones</a>
